[project]
name = "support-triage-openenv"
version = "1.0.0"
description = "OpenEnv customer support triage environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "openai>=2.7.2,<3.0.0",
  "PyYAML>=6.0.0,<7.0.0",
]

[project.scripts]
server = "uvicorn:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
